# weather-display

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml  python-publish.yml
src/: .gitignore  __init__.py  backend.py  config.ini  display.py  location.py  main.py
src/config/: config.ini
src/weather_display/: backend.py  display.py  location.py
src/weather_display/config/: config.ini  weather_codes.py
