[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-display"
version = "v0.3.0"
description = "A TUI Weather Display."
authors = [{ name = "Wyatt Johnson", email = "enderprooffical@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "configparser",
    "geographiclib",
    "geopy",
    "PyTermGUI",
    "typing_extensions",
    "wcwidth",
]

[project.scripts]
weather-display = "weather-display.display:main"
weather-location = "weather-display.location:main"
