[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-display"
version = "v0.4.1"
description = "A TUI Weather Display."
authors = [{ name = "Wyatt Johnson", email = "enderprooffical@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "certifi",
    "charset-normalizer",
    "configparser",
    "geographiclib",
    "geopy",
    "idna",
    "pathlib",
    "PyTermGUI",
    "requests",
    "typing_extensions",
    "urllib3",
    "wcwidth",
]

[project.scripts]
weather-display = "weather_display.display:main"
weather-location = "weather_display.location:main"

[tool.setuptools.package-data]
weather-display = ["defaults/*.ini"]
